gccida/g2/c_add_case_label
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3803:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3806:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3809:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *attributes; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3810:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3811:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3812:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3817:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3875:20: error: expected expression
v13 = ( tree_node *)global_trees; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3875:9: error: use of undeclared identifier 'tree_node'
v13 = ( tree_node *)global_trees; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3885:20: error: expected expression
v20 = ( tree_node *)splay_tree_lookup( cases, ( splay_tree_key)low_value); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3885:9: error: use of undeclared identifier 'tree_node'
v20 = ( tree_node *)splay_tree_lookup( cases, ( splay_tree_key)low_value); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3905:29: error: expected expression
attributes = *( tree_node **)( v15->value + 48); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3905:17: error: use of undeclared identifier 'tree_node'
attributes = *( tree_node **)( v15->value + 48); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3926:22: error: expected expression
v23 = *( tree_node **)( v21->value + 40); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3926:10: error: use of undeclared identifier 'tree_node'
v23 = *( tree_node **)( v21->value + 40); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/c-common.c:3935:29: error: expected expression
attributes = *( tree_node **)( v21->value + 48); 
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/c_add_case_label/src/obj/c-common.o] Error 1
